@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-5
-Date: 2012-01-14
+Date: 2012-01-15
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
